--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -5,16 +5,16 @@
 
     <group android:checkableBehavior="single">
         <item
-            android:id="@+id/nav_home"
-            android:icon="@drawable/ic_menu_camera"
-            android:title="@string/menu_home" />
-        <item
-            android:id="@+id/nav_gallery"
-            android:icon="@drawable/ic_menu_gallery"
+            android:id="@+id/nav_fuel"
+            android:icon="@drawable/ic_gas_station"
             android:title="@string/menu_gallery" />
         <item
+            android:id="@+id/nav_payment_card"
+            android:icon="@drawable/ic_payment_card"
+            android:title="@string/menu_home" />
+        <item
             android:id="@+id/nav_slideshow"
-            android:icon="@drawable/ic_menu_slideshow"
+            android:icon="@drawable/ic_medical"
             android:title="@string/menu_slideshow" />
     </group>
 </menu>
