--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -20,5 +20,9 @@
             android:id="@+id/nav_responsivas"
             android:icon="@drawable/ic_pddf"
             android:title="@string/menu_responsivas" />
+        <item
+            android:id="@+id/nav_add_paciente"
+            android:icon="@drawable/ic_pet"
+            android:title="@string/menu_add_paciente" />
     </group>
 </menu>
