--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -7,13 +7,13 @@
 
     <fragment
         android:id="@+id/nav_fuel"
-        android:name="com.example.katzen.ui.gallery.FuellFragment"
+        android:name="com.example.katzen.ui.gasolina.FuellFragment"
         android:label="@string/menu_gallery"
         tools:layout="@layout/fragment_gallery" />
 
     <fragment
         android:id="@+id/nav_payment_card"
-        android:name="com.example.katzen.ui.home.PaymetCardFragment"
+        android:name="com.example.katzen.ui.card.PaymetCardFragment"
         android:label="@string/menu_home"
         tools:layout="@layout/fragment_home" />
 
@@ -23,23 +23,6 @@
         android:label="@string/menu_slideshow"
         tools:layout="@layout/fragment_slideshow" />
 
-    <fragment
-        android:id="@+id/nav_responsivas"
-        android:name="com.example.katzen.ui.responsivas.ResponsivaFragment"
-        android:label="@string/menu_responsivas"
-        tools:layout="@layout/fragment_slideshow" />
-
-    <fragment
-        android:id="@+id/nav_add_paciente"
-        android:name="com.example.katzen.ui.paciente.AgregarPacienteFragment"
-        android:label="@string/menu_add_paciente"
-        tools:layout="@layout/fragment_add_paciente" />
-
-    <fragment
-        android:id="@+id/nav_store"
-        android:name="com.example.katzen.ui.store.StoreFragment"
-        android:label="@string/menu_store"
-        tools:layout="@layout/fragment_store" />
 
     <fragment
         android:id="@+id/nav_viajes"
