--- a/app/src/main/res/layout/vista_viajes_detalle.xml
+++ b/app/src/main/res/layout/vista_viajes_detalle.xml
@@ -6,11 +6,31 @@
     android:padding="10dp"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@color/background_color">
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:gravity="center|right"
+        android:layout_marginBottom="10dp"
+        android:translationZ="10dp">
+
+        <com.google.android.material.floatingactionbutton.FloatingActionButton
+            android:id="@+id/btn_edit"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:clickable="true"
+            android:layout_gravity="center"
+            android:src="@drawable/ic_edit"
+            android:backgroundTint="@color/red_A700"
+            tools:ignore="MissingConstraints" />
+    </LinearLayout>
+
+
 
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="210dp"
         app:cardCornerRadius="25dp"
+        android:layout_marginTop="10dp"
         tools:ignore="MissingConstraints">
 
 
@@ -24,7 +44,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginRight="10dp"
-                android:gravity="right"
+                android:gravity="center|right"
                 android:orientation="horizontal">
 
                 <ImageView
@@ -42,6 +62,17 @@
                     android:textColor="#000000"
                     android:textSize="15dp"
                     android:textStyle="bold" />
+
+                <androidx.cardview.widget.CardView
+                    android:layout_width="30dp"
+                    android:layout_height="30dp"
+                    android:layout_margin="5dp"
+                    app:cardCornerRadius="25dp"
+                    android:layout_gravity="center"
+                    tools:ignore="MissingConstraints">
+
+
+                </androidx.cardview.widget.CardView>
 
             </LinearLayout>
 
