--- a/app/src/main/res/layout/vista_viajes_detalle.xml
+++ b/app/src/main/res/layout/vista_viajes_detalle.xml
@@ -27,6 +27,7 @@
 
 
     <androidx.cardview.widget.CardView
+        android:id="@+id/card_cont"
         android:layout_width="match_parent"
         android:layout_height="210dp"
         app:cardCornerRadius="25dp"
