--- a/app/src/main/res/layout/fragment_gallery.xml
+++ b/app/src/main/res/layout/fragment_gallery.xml
@@ -8,155 +8,220 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:orientation="vertical">
 
-        <LinearLayout
+        <TextView
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="20dp"
+            android:text="Gasolina"
+            android:textColor="@color/black"
+            android:textSize="26dp"
+            android:fontFamily="@font/varela"
+            android:textStyle="bold"
+            android:gravity="center"/>
+        <androidx.cardview.widget.CardView
+            android:layout_width="match_parent"
+            android:layout_height="400dp"
             android:layout_margin="10dp"
-            android:orientation="horizontal">
+            app:cardCornerRadius="30dp">
 
-            <RadioGroup
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:orientation="horizontal"
-                android:layout_weight="1" >
-
-                <RadioButton
-                    android:id="@+id/rb_semana"
-                    android:layout_width="wrap_content"
+                android:orientation="vertical"
+                android:layout_margin="10dp">
+                <com.google.android.material.textfield.TextInputLayout
+                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:checked="true"
-                    android:text="@string/rb_semana" />
+                    android:background="@color/white"
+                    android:textColorHint="@color/black"
+                    android:layout_margin="5dp"
+                    app:startIconDrawable="@drawable/ic_categoria">
 
-                <RadioButton
-                    android:id="@+id/rb_campaña"
-                    android:layout_width="wrap_content"
+                    <AutoCompleteTextView
+                        android:id="@+id/sp_categorias"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:fontFamily="@font/varela"
+                        android:textColor="@color/black"
+                        android:textColorHint="@color/black"
+                        android:hint="@string/txtField_categoria"/>
+
+                </com.google.android.material.textfield.TextInputLayout>
+                <com.google.android.material.textfield.TextInputLayout
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:text="@string/rb_campaña" />
+                    android:layout_margin="5dp"
+                    app:startIconDrawable="@drawable/ic_location"
+                    android:enabled="true"
+                    android:textColorHint="@color/black"
+                    android:hint="@string/txtField_kilometros">
 
-                <RadioButton
-                    android:id="@+id/rb_ruta"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:text="@string/rb_ruta" />
+                    <com.google.android.material.textfield.TextInputEditText
+                        android:id="@+id/et_costo"
+                        android:backgroundTint="@color/white"
+                        android:inputType="number|numberDecimal"
+                        android:digits="0123456789."
+                        android:fontFamily="@font/varela"
+                        android:textColor="@color/black"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content" />
+                </com.google.android.material.textfield.TextInputLayout>
 
-                <RadioButton
-                    android:id="@+id/rb_moto"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:text="@string/rb_moto" />
-            </RadioGroup>
+                <androidx.cardview.widget.CardView
+                    android:layout_margin="10dp"
+                    android:layout_width="match_parent"
+                    android:layout_height="150dp"
+                    app:cardCornerRadius="25dp"
+                    android:backgroundTint="@color/background_color">
 
-        </LinearLayout>
+                    <androidx.cardview.widget.CardView
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_margin="1dp"
+                        app:cardCornerRadius="25dp">
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_margin="10dp"
-            android:orientation="horizontal">
+                        <LinearLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:orientation="horizontal">
 
-            <EditText
-                android:id="@+id/et_costo"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:ems="10"
-                android:inputType="numberDecimal" />
+                            <LinearLayout
+                                android:layout_width="match_parent"
+                                android:layout_height="match_parent"
+                                android:layout_weight="1"
+                                android:gravity="center"
+                                android:orientation="vertical">
+                                <ImageView
+                                    android:layout_width="40dp"
+                                    android:layout_height="40dp"
+                                    android:layout_margin="20dp"
+                                    android:src="@drawable/ic_costo"/>
+                                <TextView
+                                    android:id="@+id/txt_costo"
+                                    android:layout_width="match_parent"
+                                    android:layout_height="wrap_content"
+                                    android:text="$30.00"
+                                    android:gravity="center"
+                                    android:fontFamily="@font/varela"
+                                    android:textSize="22dp"
+                                    android:textStyle="bold"
+                                    android:textColor="@color/black"/>
+                                <TextView
+                                    android:layout_width="match_parent"
+                                    android:layout_height="wrap_content"
+                                    android:text="Costo"
+                                    android:gravity="center"
+                                    android:fontFamily="@font/varela"
+                                    android:textSize="15dp"
+                                    android:textStyle="normal"
+                                    android:textColor="@color/black"/>
+                            </LinearLayout>
+                            <LinearLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:layout_weight="1"
+                            android:gravity="center"
+                            android:orientation="vertical">
+                            <ImageView
+                                android:layout_width="40dp"
+                                android:layout_height="40dp"
+                                android:layout_margin="20dp"
+                                android:src="@drawable/ic_ganancias"/>
+                            <TextView
+                                android:id="@+id/txt_ganancia"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:text="$17.00"
+                                android:gravity="center"
+                                android:fontFamily="@font/varela"
+                                android:textSize="22dp"
+                                android:textStyle="bold"
+                                android:textColor="@color/black"/>
+                            <TextView
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:text="Ganancia"
+                                android:gravity="center"
+                                android:fontFamily="@font/varela"
+                                android:textSize="15dp"
+                                android:textStyle="normal"
+                                android:textColor="@color/black"/>
+                        </LinearLayout>
+                            <LinearLayout
+                                android:layout_width="match_parent"
+                                android:layout_height="match_parent"
+                                android:layout_weight="1"
+                                android:gravity="center"
+                                android:orientation="vertical">
+                                <ImageView
+                                    android:layout_width="40dp"
+                                    android:layout_height="40dp"
+                                    android:layout_margin="20dp"
+                                    android:src="@drawable/ic_ganancia"/>
+                                <TextView
+                                    android:id="@+id/txt_venta"
+                                    android:layout_width="match_parent"
+                                    android:layout_height="wrap_content"
+                                    android:text="$47.00"
+                                    android:gravity="center"
+                                    android:fontFamily="@font/varela"
+                                    android:textSize="22dp"
+                                    android:textStyle="bold"
+                                    android:textColor="@color/black"/>
+                                <TextView
+                                    android:layout_width="match_parent"
+                                    android:layout_height="wrap_content"
+                                    android:text="Venta"
+                                    android:gravity="center"
+                                    android:fontFamily="@font/varela"
+                                    android:textSize="15dp"
+                                    android:textStyle="normal"
+                                    android:textColor="@color/black"/>
+                            </LinearLayout>
 
-            <Button
-                android:id="@+id/btn_calcula"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:layout_margin="5dp"
-                android:text="@string/btn_calc" />
-            <Button
-                android:id="@+id/btn_clean"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:layout_margin="5dp"
-                android:text="@string/btn_clen" />
-        </LinearLayout>
+                        </LinearLayout>
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_margin="10dp"
-            android:orientation="horizontal">
+                    </androidx.cardview.widget.CardView>
+                </androidx.cardview.widget.CardView>
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:gravity="center"
-                android:textSize="20dp"
-                android:textStyle="bold"
-                android:text="@string/menu_costo" />
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:gravity="center"
+                    android:orientation="horizontal">
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:textSize="20dp"
-                android:textStyle="bold"
-                android:gravity="center"
-                android:text="@string/menu_ganancia" />
+                    <Button
+                        android:id="@+id/btn_clean"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_margin="5dp"
+                        android:layout_weight="1"
+                        android:backgroundTint="@color/katzen_rosa_fuerte"
+                        android:fontFamily="@font/varela"
+                        android:text="@string/btn_limpiar"
+                        android:textSize="18dp" />
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:textSize="20dp"
-                android:textStyle="bold"
-                android:gravity="center"
-                android:text="@string/menu_venta" />
-        </LinearLayout>
+                    <Button
+                        android:id="@+id/btn_calcula"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_margin="10dp"
-            android:orientation="horizontal">
-            <TextView
-                android:id="@+id/txt_costo"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:textSize="18dp"
-                android:textStyle="bold"
-                android:textColor="#CD2703"
-                android:gravity="center"
-                android:text="@string/title_dinero" />
+                        android:fontFamily="@font/varela"
+                        android:textSize="18dp"
+                        android:backgroundTint="@color/katzen_rosa_fuerte"
+                        android:layout_margin="5dp"
+                        android:text="@string/btn_calcular" />
 
-            <TextView
-                android:id="@+id/txt_ganancia"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:gravity="center"
-                android:textStyle="bold"
-                android:textColor="#08A1F2"
-                android:textSize="18dp"
-                android:text="@string/title_dinero" />
+                </LinearLayout>
 
-            <TextView
-                android:id="@+id/txt_venta"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:textSize="18dp"
-                android:textStyle="bold"
-                android:textColor="#4CB219"
-                android:gravity="center"
-                android:text="@string/title_dinero" />
-        </LinearLayout>
+            </LinearLayout>
 
+        </androidx.cardview.widget.CardView>
     </LinearLayout>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
