--- a/app/src/main/res/layout/fragment_gasolina.xml
+++ b/app/src/main/res/layout/fragment_gasolina.xml
@@ -47,6 +47,7 @@
                         android:layout_height="match_parent"
                         android:fontFamily="@font/varela"
                         android:textColor="@color/black"
+                        app:hintTextColor="@color/black"
                         android:textColorHint="@color/black"
                         android:hint="@string/txtField_categoria"/>
 
@@ -65,6 +66,8 @@
                         android:backgroundTint="@color/white"
                         android:inputType="number|numberDecimal"
                         android:digits="0123456789."
+                        android:imeOptions="actionDone"
+                        app:hintTextColor="@color/black"
                         android:fontFamily="@font/varela"
                         android:textColor="@color/black"
                         android:layout_width="match_parent"
@@ -104,7 +107,7 @@
                                     android:id="@+id/txt_costo"
                                     android:layout_width="match_parent"
                                     android:layout_height="wrap_content"
-                                    android:text="$30.00"
+                                    android:text="@string/title_dinero"
                                     android:gravity="center"
                                     android:fontFamily="@font/varela"
                                     android:textSize="22dp"
@@ -135,7 +138,7 @@
                                 android:id="@+id/txt_ganancia"
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
-                                android:text="$17.00"
+                                android:text="@string/title_dinero"
                                 android:gravity="center"
                                 android:fontFamily="@font/varela"
                                 android:textSize="22dp"
@@ -166,7 +169,7 @@
                                     android:id="@+id/txt_venta"
                                     android:layout_width="match_parent"
                                     android:layout_height="wrap_content"
-                                    android:text="$47.00"
+                                    android:text="@string/title_dinero"
                                     android:gravity="center"
                                     android:fontFamily="@font/varela"
                                     android:textSize="22dp"
