--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -22,9 +22,14 @@
             android:icon="@drawable/baseline_directions_car_24"
             android:title="@string/menu_viajes" />
 
-        <item
+        <!--<item
             android:id="@+id/nav_example"
             android:icon="@drawable/baseline_directions_car_24"
-            android:title="@string/menu_example" />
+            android:title="@string/menu_example" />-->
+
+        <item
+            android:id="@+id/nav_mascota"
+            android:icon="@drawable/ic_pet"
+            android:title="@string/menu_mascota" />
     </group>
 </menu>
