--- a/app/src/main/res/layout/vista_mascota.xml
+++ b/app/src/main/res/layout/vista_mascota.xml
@@ -48,33 +48,47 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:layout_weight="1"
                     android:orientation="horizontal">
                     <TextView
-                        android:layout_width="wrap_content"
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:layout_weight="1"
                         android:fontFamily="@font/varela"
                         android:textStyle="bold"
                         android:text="Nombre: "/>
                     <TextView
+                        android:id="@+id/txt_nombre"
+                        android:layout_weight="1"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:textAlignment="center"
                         android:fontFamily="@font/varela"
-                        android:text="Oreon"/>
+                        android:text="Oreon Tremendo"/>
 
                 </LinearLayout>
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:layout_weight="1"
                     android:orientation="horizontal">
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:fontFamily="@font/varela"
-                        android:textStyle="bold"
-                        android:text="Sexo: "/>
                     <TextView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:layout_weight="1"
+                        android:fontFamily="@font/varela"
+                        android:textStyle="bold"
+                        android:text="Sexo: "/>
+
+
+                    <TextView
+                        android:id="@+id/txt_sexo"
+                        android:layout_gravity="center"
+                        android:textAlignment="center"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
                         android:fontFamily="@font/varela"
                         android:text="Macho"/>
 
@@ -82,16 +96,24 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:layout_weight="1"
                     android:orientation="horizontal">
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:fontFamily="@font/varela"
-                        android:textStyle="bold"
-                        android:text="Especie: "/>
+
                     <TextView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:fontFamily="@font/varela"
+                        android:layout_gravity="center"
+                        android:layout_weight="1"
+                        android:textStyle="bold"
+                        android:text="Especie: "/>
+                    <TextView
+                        android:id="@+id/txt_especie"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:layout_gravity="center"
+                        android:textAlignment="center"
                         android:fontFamily="@font/varela"
                         android:text="Felino"/>
 
